[#17] Improved first time user login

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -32,3 +32,9 @@ h2 {
     background-color: blue;
     max-width: 100%;
 }
+
+.noBudget {
+  padding: 1em;
+  border: 1px solid #ccc;
+  margin-top: 25px;
+}
