--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="login-issues">
               <a [routerLink]="['/reset-password']">Can't login?</a><br>
-              <a [routerLink]="['/create-account']">Create Acount</a>
+              <a [routerLink]="['/create-account']">Create Account</a>
             </div>
         </div>
     </div>
