--- a/src/app/budget-history/budget-history.component.html
+++ b/src/app/budget-history/budget-history.component.html
@@ -8,7 +8,10 @@
                 </ol>
               </nav>
             <h1> {{ budgetDate | date: 'MMMM YYYY' }} Budget</h1>
-            <table class="budgetTable" style="margin-top:10px;">
+            <div class="col-md-12 order-1 order-md-1" *ngIf="budgetArchive.length == 0" style="text-align: center;margin-top:100px;">
+              <img src="assets/loading.gif">
+            </div>
+            <table class="budgetTable" style="margin-top:10px;"  *ngIf="budgetArchive.length > 0">
               <th>Category</th>
               <th>Budget</th>
               <th>Spent</th>
