--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,6 +8,6 @@
 button {
     background-color: rgb(2, 73, 2);
     color: white;
-    border: 1px solid rgb(2, 73, 2);
+    background-color: rgb(25, 133, 25);
     float: right;
 }
