--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,6 +5,15 @@
     padding: .7em;
 }
 
+.header a {
+  color: rgb(228, 228, 228);
+  margin-left: 25px;
+}
+
+.header a:hover {
+  text-decoration: none;
+}
+
 button {
     background-color: rgb(2, 73, 2);
     color: white;
