--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<div class="header"><button *ngIf="isLoggedIn()" (click)="logout()">Logout</button></div>
+<div class="header">
+  <a href="dashboard"><i class="fa fa-home"></i> Dashboard</a>
+  <a href="manage-budget"><i class="fa fa-money" aria-hidden="true"></i> Budget</a>
+  <a href="spending"><i class="fa fa-line-chart" aria-hidden="true"></i> Spending</a>
+  <button *ngIf="isLoggedIn()" (click)="logout()">Logout</button>
+</div>
