UI improvements, added mail client

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="header">
+  <img src="assets/logo.png" style="width:35px;height:35px;margin-left:10px;">
   <ng-container *ngIf="isLoggedIn()">
     <a href="dashboard">Dashboard</a>
     <a href="manage-budget">Budget</a>
