--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,19 +1,20 @@
 <div class="container">
   <div class="row justify-content-center">
-      <div class="col-5 reset-password">
+      <div class="col-6 reset-password">
         <span style="width:100%;text-align:center;"><h1>Reset Password</h1></span>
         <form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
+          <div class="col-12">
+            Enter your email and we'll email you a link to reset it.
+          </div>
             <input type="text" id="email" placeholder="Email" formControlName="email">
-            <input type="password" id="old_password" placeholder="Old Password" formControlName="old_password">
-            <input type="password" id="new_password" placeholder="New Password" formControlName="new_password">
-            <button type="submit">Reset</button>
+            <a [routerLink]="['/login']">Login</a>
+            <button type="submit">Submit</button>
         </form>
         <div *ngIf="errorMessage" class="error">
             {{ errorMessage }}
         </div>
         <div *ngIf="passwordReset" class="success">
           {{ passwordReset }}<br>
-          <a [routerLink]="['/login']">Login</a>
         </div>
       </div>
   </div>
