--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,15 @@
 .header {
     width: 100%;
-    height: 50px;
-    background-color: rgb(2, 73, 2);
+    height: 55px;
+    background-color: rgb(27, 33, 75);
     padding: .7em;
 }
 
 .header a {
   color: rgb(228, 228, 228);
   margin-left: 25px;
+  font-weight: 700;
+  letter-spacing: .5px;
 }
 
 .header a:hover {
@@ -15,8 +17,6 @@
 }
 
 button {
-    background-color: rgb(2, 73, 2);
     color: white;
-    background-color: rgb(25, 133, 25);
     float: right;
 }
