--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     font-family: 'Urbanist', sans-serif;
     font-weight: 400;
+
 }
 
 input, select {
@@ -17,11 +18,6 @@ input, select {
     outline: none;
 }
 
-canvas{
-  margin-left: -75px;
-  padding-left: 2em;
-  }
-
 button {
     float: right;
     font-size: 14px;
@@ -32,7 +28,7 @@ button {
     font-weight: 400;
     padding: .4em .8em;
     letter-spacing: 1px;
-    border-radius: 18px;
+    border-radius: 16px;
     box-shadow: 0 0 1px 1px rgb(25, 133, 25);
 }
 
@@ -66,12 +62,14 @@ button {
 h1 {
   font-family: 'Urbanist', sans-serif;
   font-size: 384x;
+  font-weight: 700;
   color: rgb(90, 90, 90);
 }
 
 .budget-category {
   font-family: 'Urbanist', sans-serif;
   font-size: 18px;
+  font-weight: 400;
   color: rgb(90, 90, 90);
 }
 
