Added password reset functionality

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -3,13 +3,22 @@
       <div class="col-6 reset-password">
         <span style="width:100%;text-align:center;"><h1>Reset Password</h1></span>
         <form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
-          <div class="col-12">
-            Enter your email and we'll email you a link to reset it.
-          </div>
+          <ng-container *ngIf="!resetIdValid && !resetIdProvided; else validId">
+            <div class="col-12">
+              Enter your email and we'll email you a link to reset it.
+            </div>
             <input type="text" id="email" placeholder="Email" formControlName="email">
             <a [routerLink]="['/login']">Login</a>
             <button type="submit">Submit</button>
+          </ng-container>
         </form>
+        <ng-template #validId>
+          <form [formGroup]="passwordResetForm" (ngSubmit)="resetPassword()">
+            <input type="text" id="password" placeholder="New password" formControlName="password">
+            <input type="text" id="passwordConfirmed" placeholder="Re-enter password" formControlName="passwordConfirmed">
+            <button type="submit">Reset</button>
+          </form>
+        </ng-template>
         <div *ngIf="errorMessage" class="error">
             {{ errorMessage }}
         </div>
