--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
         <span style="width:100%;text-align:center;"><h1>Reset Password</h1></span>
         <form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
           <ng-container *ngIf="!resetIdValid && !resetIdProvided; else validId">
-            <div class="col-12">
+            <div class="col-12" style="text-align: center;">
               Enter your email and we'll email you a link to reset it.
             </div>
             <input type="text" id="email" placeholder="Email" formControlName="email">
