--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,12 @@ button {
     box-shadow: 0 0 1px 1px rgb(25, 133, 25);
 }
 
+button:hover {
+  background-color: rgb(33, 148, 33);
+  border: 1px solid rgb(33, 148, 33);
+  box-shadow: 0 0 1px 1px rgb(33, 148, 33);
+}
+
 .budgetTable {
     width: 100%;
 }
