[#30] Fixed paginator button styling issues

--- a/src/app/account-activity/account-activity.component.css
+++ b/src/app/account-activity/account-activity.component.css
@@ -10,3 +10,9 @@ td, tr, .mat-header-row, .mat-header-row {
 table {
     border-spacing: 0px;
 }
+
+:host ::ng-deep.mat-paginator .mat-paginator-container button, button:hover {
+  border:none;
+  background-color: white;
+  box-shadow: none;
+}
